<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <data>
    <variable
        name="presenter"
        type="net.emojiparty.android.bakingtime.ui.recipe_detail.RecipeDetailViewModel"
        />
  </data>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:background="@color/white"
        >

      <TextView
          android:id="@+id/detail_recipe_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:text="@{presenter.recipe.name}"
          android:textSize="36sp"
          tools:text="Nutella Pie"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingBottom="0dp"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:text="@{@string/servings(presenter.recipe.servings)}"
          android:textSize="18sp"
          tools:text="Serves: 8"
          />

      <TextView
          android:text="@string/ingredients"
          style="@style/header"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:lineSpacingExtra="4dp"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:textSize="18sp"
          android:text="@{presenter.allIngredients(presenter.recipe)}"
          tools:text="5 Tbsp vanilla\n1 kg Nutella"
          />

      <TextView
          android:text="@string/steps"
          style="@style/header"
          />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recycler_view"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />
      </RelativeLayout>


    </LinearLayout>
  </ScrollView>
</layout>

