<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data>
    <variable
        name="presenter"
        type="net.emojiparty.android.bakingtime.ui.recipe_detail.StepPresenter"
        />
  </data>

  <ScrollView
      android:id="@+id/detail_scrollview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/white"
      >
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:clickable="true"
        android:focusable="true"
        >

      <TextView
          android:id="@+id/step_short_description"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginLeft="16dp"
          android:layout_marginRight="8dp"
          android:layout_marginStart="16dp"
          android:layout_marginTop="8dp"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:text="@{presenter.viewModel.selectedStep.shortDescription}"
          android:textSize="36sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:text="Starting prep"
          />
      <TextView
          android:id="@+id/step_description"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:text="@{presenter.viewModel.selectedStep.description}"
          android:textSize="18sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="@+id/step_short_description"
          app:layout_constraintTop_toBottomOf="@+id/step_short_description"
          tools:text="1. Preheat the oven to 350\u00b0F. Butter a 9 inch deep dish pie pan."
          />

      <ImageView
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:background="@color/colorPrimary"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="16dp"
          imageUrl="@{presenter.viewModel.selectedStep.thumbnailURL}"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/step_description"
          app:layout_constraintBottom_toTopOf="@+id/previous"
          android:scaleType="centerCrop"
          />

      <com.google.android.exoplayer2.ui.SimpleExoPlayerView
          android:id="@+id/video_player"
          android:layout_marginBottom="16dp"
          android:layout_marginTop="16dp"
          style="@style/aspectRatio"
          isVisible="@{presenter.viewModel.selectedStep.videoURL}"
          app:layout_constraintBottom_toTopOf="@+id/previous"
          app:layout_constraintTop_toBottomOf="@+id/step_description"
          />

      <Button
          android:id="@+id/previous"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginLeft="16dp"
          android:layout_marginStart="16dp"
          android:text="@string/previous"
          isVisible="@{presenter.viewModel.previousStep}"
          android:onClick="@{() -> presenter.onPreviousStepClicked()}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          />
      <Button
          android:id="@+id/next"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:text="@string/next"
          isVisible="@{presenter.viewModel.nextStep}"
          android:onClick="@{() -> presenter.onNextStepClicked()}"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          />

    </android.support.constraint.ConstraintLayout>

  </ScrollView>

</layout>

